src/test/ui/argument-suggestions/invalid_arguments.stderr
error[E0308]: mismatched types
  --> $DIR/invalid_arguments.rs:13:11
   |
LL |   one_arg(1.0);
   |           ^^^ expected `i32`, found floating-point number

error[E0308]: mismatched types
  --> $DIR/invalid_arguments.rs:16:19
   |
LL |   two_arg_same(1, "");
   |                   ^^ expected `i32`, found `&str`

error[E0308]: mismatched types
  --> $DIR/invalid_arguments.rs:17:16
   |
LL |   two_arg_same("", 1);
   |                ^^ expected `i32`, found `&str`

error[E0308]: mismatched types
  --> $DIR/invalid_arguments.rs:18:16
   |
LL |   two_arg_same("", "");
   |                ^^ expected `i32`, found `&str`

error[E0308]: mismatched types
  --> $DIR/invalid_arguments.rs:18:20
   |
LL |   two_arg_same("", "");
   |                    ^^ expected `i32`, found `&str`

error[E0308]: mismatched types
  --> $DIR/invalid_arguments.rs:21:19
   |
LL |   two_arg_diff(1, "");
   |                   ^^ expected `f32`, found `&str`

error[E0308]: mismatched types
  --> $DIR/invalid_arguments.rs:22:16
   |
LL |   two_arg_diff("", 1.0);
   |                ^^ expected `i32`, found `&str`

error[E0308]: mismatched types
  --> $DIR/invalid_arguments.rs:23:16
   |
LL |   two_arg_diff("", "");
   |                ^^ expected `i32`, found `&str`

error[E0308]: mismatched types
  --> $DIR/invalid_arguments.rs:23:20
   |
LL |   two_arg_diff("", "");
   |                    ^^ expected `f32`, found `&str`

error[E0308]: mismatched types
  --> $DIR/invalid_arguments.rs:27:18
   |
LL |   three_arg_diff(X{}, 1.0, "");
   |                  ^^^ expected `i32`, found struct `X`

error[E0308]: mismatched types
  --> $DIR/invalid_arguments.rs:28:21
   |
LL |   three_arg_diff(1, X {}, "");
   |                     ^^^^ expected `f32`, found struct `X`

error[E0308]: mismatched types
  --> $DIR/invalid_arguments.rs:29:26
   |
LL |   three_arg_diff(1, 1.0, X {});
   |                          ^^^^ expected `&str`, found struct `X`

error[E0308]: mismatched types
  --> $DIR/invalid_arguments.rs:31:18
   |
LL |   three_arg_diff(X {}, X {}, "");
   |                  ^^^^ expected `i32`, found struct `X`

error[E0308]: mismatched types
  --> $DIR/invalid_arguments.rs:31:24
   |
LL |   three_arg_diff(X {}, X {}, "");
   |                        ^^^^ expected `f32`, found struct `X`

error[E0308]: mismatched types
  --> $DIR/invalid_arguments.rs:34:18
   |
LL |   three_arg_diff(X {}, 1.0, X {});
   |                  ^^^^ expected `i32`, found struct `X`

error[E0308]: mismatched types
  --> $DIR/invalid_arguments.rs:34:29
   |
LL |   three_arg_diff(X {}, 1.0, X {});
   |                             ^^^^ expected `&str`, found struct `X`

error[E0308]: mismatched types
  --> $DIR/invalid_arguments.rs:37:21
   |
LL |   three_arg_diff(1, X {}, X {});
   |                     ^^^^ expected `f32`, found struct `X`

error[E0308]: mismatched types
  --> $DIR/invalid_arguments.rs:37:27
   |
LL |   three_arg_diff(1, X {}, X {});
   |                           ^^^^ expected `&str`, found struct `X`

error[E0308]: mismatched types
  --> $DIR/invalid_arguments.rs:41:18
   |
LL |   three_arg_diff(X {}, X {}, X {});
   |                  ^^^^ expected `i32`, found struct `X`

error[E0308]: mismatched types
  --> $DIR/invalid_arguments.rs:41:24
   |
LL |   three_arg_diff(X {}, X {}, X {});
   |                        ^^^^ expected `f32`, found struct `X`

error[E0308]: mismatched types
  --> $DIR/invalid_arguments.rs:41:30
   |
LL |   three_arg_diff(X {}, X {}, X {});
   |                              ^^^^ expected `&str`, found struct `X`

error[E0308]: mismatched types
  --> $DIR/invalid_arguments.rs:46:20
   |
LL |   three_arg_repeat(X {}, 1, "");
   |                    ^^^^ expected `i32`, found struct `X`

error[E0308]: mismatched types
  --> $DIR/invalid_arguments.rs:47:23
   |
LL |   three_arg_repeat(1, X {}, "");
   |                       ^^^^ expected `i32`, found struct `X`

error[E0308]: mismatched types
  --> $DIR/invalid_arguments.rs:48:26
   |
LL |   three_arg_repeat(1, 1, X {});
   |                          ^^^^ expected `&str`, found struct `X`

error[E0308]: mismatched types
  --> $DIR/invalid_arguments.rs:50:20
   |
LL |   three_arg_repeat(X {}, X {}, "");
   |                    ^^^^ expected `i32`, found struct `X`

error[E0308]: mismatched types
  --> $DIR/invalid_arguments.rs:50:26
   |
LL |   three_arg_repeat(X {}, X {}, "");
   |                          ^^^^ expected `i32`, found struct `X`

error[E0308]: mismatched types
  --> $DIR/invalid_arguments.rs:53:20
   |
LL |   three_arg_repeat(X {}, 1, X {});
   |                    ^^^^ expected `i32`, found struct `X`

error[E0308]: mismatched types
  --> $DIR/invalid_arguments.rs:53:29
   |
LL |   three_arg_repeat(X {}, 1, X {});
   |                             ^^^^ expected `&str`, found struct `X`

error[E0308]: mismatched types
  --> $DIR/invalid_arguments.rs:56:23
   |
LL |   three_arg_repeat(1, X {}, X{});
   |                       ^^^^ expected `i32`, found struct `X`

error[E0308]: mismatched types
  --> $DIR/invalid_arguments.rs:56:29
   |
LL |   three_arg_repeat(1, X {}, X{});
   |                             ^^^ expected `&str`, found struct `X`

error[E0308]: mismatched types
  --> $DIR/invalid_arguments.rs:60:20
   |
LL |   three_arg_repeat(X {}, X {}, X {});
   |                    ^^^^ expected `i32`, found struct `X`

error[E0308]: mismatched types
  --> $DIR/invalid_arguments.rs:60:26
   |
LL |   three_arg_repeat(X {}, X {}, X {});
   |                          ^^^^ expected `i32`, found struct `X`

error[E0308]: mismatched types
  --> $DIR/invalid_arguments.rs:60:32
   |
LL |   three_arg_repeat(X {}, X {}, X {});
   |                                ^^^^ expected `&str`, found struct `X`

error: aborting due to 33 previous errors

For more information about this error, try `rustc --explain E0308`.
